# opfs-wasm-exploration

./: README.md
hello-wasm/: Cargo.toml  index.html
opfs/: index.html  index.js  localhost-key.pem  localhost.pem  opfs.local-key.pem  opfs.local.pem  package-lock.json
opfs-browser/: Caddyfile  docker-compose.yml  package-lock.json  package.json  vite.config.ts
opfs-browser/garage/: garage.toml
opfs-browser/garage/data/: garage-marker
opfs-browser/garage/meta/: cluster_layout  data_layout  lifecycle_worker_state  node_key  node_key.pub  scrub_info
opfs-browser/garage/meta/db.lmdb/: data.mdb  lock.mdb
opfs-browser/src/: App.tsx  BucketChooser.tsx  Finder.tsx  main.tsx
